--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
 # Add the Libraries and Packages Required for the Project Here, These will be installed when Codespaces is started and on "make install"
+numpy
+typing
+nltk
